--- a/njf/css/playlist.css
+++ b/njf/css/playlist.css
@@ -82,7 +82,7 @@
 
 /* Actions */
 #actions {
-    padding: 0.5em;
+    padding: 1em;
     background: linear-gradient(-63deg, rgba(255, 255, 255, 0.91), rgba(255, 255, 255, 0.64));
 }
 
@@ -91,33 +91,46 @@
     display: block;
     margin-top: 0.5em;
 }
-#download-button, #youtube-button {
+#download-button, #youtube-button, #forward-button, #rewind-button {
     display: inline-block;
     color: #000;
     padding: 0.5em;
-    font-size: small;
+    font-size: medium;
+}
+#forward-button:hover, #rewind-button:hover {
+    color: #DE7234;
 }
 #youtube-button:hover {
     color: #B40226;
 }
 #download-button:hover {
-    color: #02275B;
+    color: #008BB9;
+}
+#time-text {
+    width: 2em;
+    text-align: center;
+    background: none;
+    color: #000;
+    border: none;
+}
+#time-text:hover {
+    color: #DE7234;
 }
 
 /* Search */
 #search-bar {
-    padding: 0.5em;
     display: inline-block;
-    background: rgba(255, 255, 255, 0.9);
     border-radius: 2em;
+    width: 100%;
 }
-#search-bar:focus {
-    background: #fff;
+#search-area {
+    width: 92%;
 }
 #search-text {
     border: 0 none;
     background: none;
     color: #000;
+    width: 100%;
 }
 #search-icon, #search-area, #clear-search {
     display: inline-block;
