--- a/njf/css/styles.css
+++ b/njf/css/styles.css
@@ -73,11 +73,19 @@ footer {
     transition: all 200ms ease-in-out;
 }
 
+footer {
+    display: none;
+}
+
 /* Display */
 @media screen and (min-width: 1000px) {
 
     #main {
         padding: 4em 20em;
+    }
+
+    footer {
+        display: block;
     }
 }
 
