--- a/njf/css/styles.css
+++ b/njf/css/styles.css
@@ -53,11 +53,11 @@ footer {
 #footer-left {
     float: left;
 }
-#footer-center {
-    float: center;
-}
 #footer-right {
     float: right;
+}
+footer .row {
+    margin: .5em;
 }
 
 .col {
