Added embed to swf files

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ body {
     --accent-color-1: #51a5ff;
     --accent-color-2: #90bdc0;
     --accent-color-3: #c592ee;
+
+    background-color: #fff;
+}
+
+#main {
+    background-color: #fdfdfd;
 }
 
 a {
@@ -15,6 +21,7 @@ a:hover {
 #header {
     /*background-color: #000;*/
     padding-top: 3em;
+    padding-bottom: 1em;
 }
 
 .unselectable {
@@ -69,4 +76,18 @@ footer a:hover {
 blockquote {
     color: #7f7f7f;
     font-style: italic;
+}
+
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
 }
